* IMPROVEMENT: Provide identity information as a list.
* BUGFIX: Corrected medadata request time parsing.
* BUGFIX: Validate list impl pointer before use.
* BUGFIX: Cryptoapi KSI_PKISignature_new fails if the input blob can not be parsed.
* BUGFIX: CryptoAPI uses PKCS7 signatures embedded intermediate certificates in verification process.
Version 3.12

* IMPROVEMENT: Increased the size of the statically allocated KSI_Integer pool up to the value of 0xff.
* IMPROVEMENT: Removed experimental feature KSI_NetworkClient_performAll.
* IMPROVEMENT: Removed multi-signature support from the SDK.

Version 3.11

2016-11-03 release(3.10.1893)
* BUGFIX: Disabled cURL from using signals.
* IMPROVEMENT: Removed deprecated functions: KSI_TLV_setUintValue, KSI_TLV_fromUint, KSI_TLV_removeNestedTlv
* FEATURE: Added support for aggregation and extending PDU version 2.

Version 3.10

2016-10-18 release(3.10.1839)
* IMPROVEMENT: Refactored signature verification step attribute handling.
* IMPROVEMENT: Implemented KSI_BlockSigner getter for the hash value of the last leaf in the tree.
* BUGFIX: Fixed debian build.
* BUGFIX: Reference counting issues fixed.
* IMPROVEMENT: Removed support for Windows build combination DLL=dll and RTL=MT(d).
* IMPROVEMENT: List macros check for NULL pointers.
* BUGFIX: Error message for unknown OID properly reported.
* BUGFIX: Userinfo in URLs with unknown schema, incl. http://, is retained for http basic authentication and is not used for KSI authentication.
* IMPROVEMENT: Moved signature helper functions from signature.{h,c} into signature_helper.{h,c}
* FEATURE: Added signature builder.
* IMPROVEMENT: All functions except *List_new and *List_free are now type safe macros.
* IMPROVEMENT: Deprecated functions KSI_TLV_setUintValue, KSI_TLV_fromUint and KSI_TLV_removeNestedTlv.

Version 3.9

2016-06-21 release(3.9.1701)
* IMPROVEMENT: Added block signature sample application.
* IMPROVEMENT: Removed dead code from http_parser.{c,h}